--- a/rsds/config/database.yml
+++ b/rsds/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: AplikacjeMobilne2023
+  host: lenrok.it
 
 development:
   <<: *default
